--- a/WorkoutDiary/Views/Account/Login.cshtml
+++ b/WorkoutDiary/Views/Account/Login.cshtml
@@ -2,22 +2,27 @@
     ViewData["Title"] = "Вход";
 }
 
-<h2>Вход</h2>
+<div class="auth-container">
+    <form asp-action="Login" method="post" class="auth-form">
+        <h2>Вход</h2>
+        <div class="form-group">
+            <label for="username">Имя пользователя</label>
+            <input type="text" id="username" name="username" required />
+        </div>
+        <div class="form-group">
+            <label for="password">Пароль</label>
+            <input type="password" id="password" name="password" required />
+        </div>
+        <div class="form-group">
+            <button type="submit">Войти</button>
+        </div>
+        @if (ViewBag.Error != null)
+        {
+            <p class="error-message">@ViewBag.Error</p>
+        }
+    </form>
+</div>
 
-<form asp-action="Login" method="post">
-    <div>
-        <label>Имя пользователя</label>
-        <input type="text" name="username" required />
-    </div>
-    <div>
-        <label>Пароль</label>
-        <input type="password" name="password" required />
-    </div>
-    <div>
-        <button type="submit">Войти</button>
-    </div>
-    @if (ViewBag.Error != null)
-    {
-        <p style="color: red;">@ViewBag.Error</p>
-    }
-</form>
+@section Styles {
+    <link rel="stylesheet" href="~/css/auth.css" />
+}
