--- a/WorkoutDiary/Views/Shared/_Layout.cshtml
+++ b/WorkoutDiary/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
