--- a/WorkoutDiary/Views/Home/Index.cshtml
+++ b/WorkoutDiary/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
 
 <div class="hero-section text-center text-white d-flex align-items-center justify-content-center">
     <div class="content">
-        <h1 class="display-3 fw-bold animate__animated animate__fadeInDown">Добро пожаловать в дневник тренировок!</h1>
+        <h1 class="display-3 fw-bold animate__animated animate__fadeInDown">Добро пожаловать в систему интернет-провайдера!</h1>
         <p class="lead my-4 animate__animated animate__fadeIn" style="animation-delay: 0.3s;">
-            Записывайте свои тренировки и следите за прогрессом с нами
+            Управляйте подключением, тарифами и личным кабинетом в один клик
         </p>
         <div class="buttons mt-5">
             <a asp-controller="Account" asp-action="Login" class="btn btn-primary btn-lg pulse me-3">Войти</a>
